// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiExpression props color accent is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 emotion-euiExpression-accent-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-accent-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color danger is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 emotion-euiExpression-danger-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-danger-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color primary is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 emotion-euiExpression-primary-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-primary-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color subdued is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 emotion-euiExpression-subdued-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-subdued-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color success is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 emotion-euiExpression-success-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props color warning is rendered 1`] = `
<span
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 emotion-euiExpression-warning-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-warning-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props descriptionWidth changes the description&apos;s width when using columns 1`] = `
<span
  class="euiExpression emotion-euiExpression-success-columns"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-danger-isUppercase-columns"
    style="flex-basis: 50px;"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value-columns"
  >
    42
  </span>
  <span
    class="euiExpression__icon emotion-euiExpression__icon-columns"
    color="danger"
    data-euiicon-type="warning"
  />
</span>
`;

exports[`EuiExpression props display can be columns 1`] = `
<span
  class="euiExpression emotion-euiExpression-success-columns"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-success-isUppercase-columns"
    style="flex-basis: 20%;"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value-columns"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props isActive false renders inactive 1`] = `
<span
  class="euiExpression emotion-euiExpression-success"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props isActive true renders active 1`] = `
<span
  class="euiExpression emotion-euiExpression-success-base-success"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props isInvalid renders error state 1`] = `
<span
  class="euiExpression emotion-euiExpression-success"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-danger-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
  <span
    class="euiExpression__icon emotion-euiExpression__icon"
    color="danger"
    data-euiicon-type="warning"
  />
</span>
`;

exports[`EuiExpression props textWrap can truncate text 1`] = `
<span
  class="euiExpression emotion-euiExpression-success-truncate"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-success-isUppercase-truncate"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value-truncate"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props uppercase false renders inherited case 1`] = `
<span
  class="euiExpression emotion-euiExpression-success"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-success"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression props uppercase true renders uppercase 1`] = `
<span
  class="euiExpression emotion-euiExpression-success"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</span>
`;

exports[`EuiExpression render with only description 1`] = `
<button
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 emotion-euiExpression-isClickable-success-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
</button>
`;

exports[`EuiExpression renders 1`] = `
<button
  aria-label="aria-label"
  class="euiExpression testClass1 testClass2 emotion-euiExpression-isClickable-success-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiExpression__description emotion-euiExpression__description-success-isUppercase"
  >
    the answer is
  </span>
   
  <span
    class="euiExpression__value emotion-euiExpression__value"
  >
    42
  </span>
</button>
`;
